Removed some extra padding and removed episodes due to rate limit issues

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,11 @@ a {
     text-decoration: none !important;
 }
 
+.container {
+    margin-top: 0 !important;
+    padding-top: 0 !important;
+}
+
 .v-navigation-drawer {
     a {
         color: inherit;
